2007-03-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.h: Declare the clutter_perspective_get_type()
	function in the header.

2007-03-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/cogl/cogl.h: Add header and compiler guards.

2007-03-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/glx/clutter-stage-glx.c: Remove the check in the
	paint chain up: we know for sure that the parent's paint
	vfunc is present.

2007-03-27  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-feature.c:
	Rejig ifdef's a little. Make drm vblanking Linux only.

	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	Add a perspective boxed type.

	* clutter/glx/clutter-stage-glx.c:
	Add some FIXMEs 

	* clutter/Makefile.am:
	* clutter/cogl/Makefile.am:
	* clutter/cogl/cogl.h:
	* clutter/cogl/gl/Makefile.am:
	* clutter/cogl/gl/cogl.c:
	* configure.ac:
	Very initial work on 'cogl' GL/GLES abstraction/utility code.

2007-03-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-scale.[ch]: Add API for getting
	the scale bounds and the gravity from a scale behaviour instance.

2007-03-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.c: Fix last commit.

2007-03-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.c: Slightly lower the proiority
	of the ClutterTimeline tick, so that events get a higher
	priority in the main loop.

2007-03-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-event.[ch]: Remove the flags member from
	the ClutterEvent structure; remove the ClutterEventFlags
	enum.

2007-03-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.h: Remove the ::get_actor_at_pos()
	and ::flush() vfuncs.

	* clutter/glx/clutter-stage-glx.c: Remove the implementations
	of those vfuncs from the backend specific code, as they are
	pure GL calls.

	* clutter/clutter-stage.c: Add back the actor hit detection